--- a/Task/task.ipynb
+++ b/Task/task.ipynb
@@ -99,7 +99,9 @@
     "##### Execution:\n",
     "\n",
     "- The code executes the `verify_collatz_conjecture` function with the defined range.\n",
-    "- It checks if there are any failed cases and prints the results accordingly. If there are no failed cases, it indicates that the Collatz conjecture holds true for all numbers in the specified range. If there are failed cases, it lists those numbers for which the conjecture does not hold.\n"
+    "- It checks if there are any failed cases and prints the results accordingly. If there are no failed cases, it indicates that the Collatz conjecture holds true for all numbers in the specified range. If there are failed cases, it lists those numbers for which the conjecture does not hold.\n",
+    "\n",
+    "---\n"
    ]
   },
   {
@@ -206,7 +208,109 @@
     "```python\n",
     "x = 16.0\n",
     "approx_root = sqrt(x)\n",
-    "print(f\"Approximate square root of {x} is {approx_root:.6f}\")\n"
+    "print(f\"Approximate square root of {x} is {approx_root:.6f}\")\n",
+    "```\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Title: Reverse Engineering Functions\n",
+    "## Date: 11-11-2023\n",
+    "### Author: Hong Wei Phang\n",
+    "\n",
+    "### Introduction:\n",
+    "Consider all possible functions taking four bits as input and outputting a single bit. How many such functions are there?\n",
+    "\n",
+    "\n",
+    "### Problem Statement:\n",
+    "-Write Python code to select one such function at random out of all the possibilities.Suppose the only way you can figure out what the function is, is by calling it with different inputs and checking the outputs.How many times do you need to call the function to be certain which function it is?\n",
+    "\n",
+    "To answer this question, we need to break it down into parts:\n",
+    "\n",
+    "### 1. Number of Functions\n",
+    "\n",
+    "A function that takes four bits as input and outputs a single bit can be thought of as mapping each of the `2^4` possible input combinations to a 0 or a 1. There are `2^4 = 16` possible inputs (since each of the four input bits can be either 0 or 1), and for each input, there are two possible outputs (0 or 1). Therefore, the total number of such functions is `2^(2^4) = 2^16` (65536).\n",
+    "\n",
+    "\n",
+    "### 2. Selecting a Random Function\n",
+    "\n",
+    "To select one such function at random, we can represent each function as a 16-bit number, where each bit corresponds to the output of the function for each of the 16 possible inputs. We can generate a random 16-bit number to represent this function.\n",
+    "\n",
+    "\n",
+    "### 3. Determining the Function\n",
+    "\n",
+    "To be certain which function it is, you need to call the function with all possible inputs. Since there are 16 possible inputs, you need to call the function 16 times.\n",
+    "\n",
+    "Now, let's write Python code to select a random function and determine the number of calls needed.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: (0, 0, 0, 0), Output: 0\n",
+      "Input: (0, 0, 0, 1), Output: 1\n",
+      "Input: (0, 0, 1, 0), Output: 1\n",
+      "Input: (0, 0, 1, 1), Output: 0\n",
+      "Input: (0, 1, 0, 0), Output: 0\n",
+      "Input: (0, 1, 0, 1), Output: 0\n",
+      "Input: (0, 1, 1, 0), Output: 0\n",
+      "Input: (0, 1, 1, 1), Output: 0\n",
+      "Input: (1, 0, 0, 0), Output: 1\n",
+      "Input: (1, 0, 0, 1), Output: 0\n",
+      "Input: (1, 0, 1, 0), Output: 0\n",
+      "Input: (1, 0, 1, 1), Output: 0\n",
+      "Input: (1, 1, 0, 0), Output: 1\n",
+      "Input: (1, 1, 0, 1), Output: 0\n",
+      "Input: (1, 1, 1, 0), Output: 1\n",
+      "Input: (1, 1, 1, 1), Output: 0\n",
+      "Number of calls needed: 16\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Total number of input combinations for 4 bits\n",
+    "total_inputs = 2 ** 4\n",
+    "\n",
+    "# Function to generate a random function\n",
+    "def generate_random_function():\n",
+    "    # Generating a random 16-bit number\n",
+    "    # Each bit represents the output for a particular input\n",
+    "    return random.getrandbits(total_inputs)\n",
+    "\n",
+    "def format_binary_input(n, bits=4):\n",
+    "    \"\"\" Format a number as a binary tuple with a fixed number of bits. \"\"\"\n",
+    "    return tuple(int(x) for x in format(n, f'0{bits}b'))\n",
+    "\n",
+    "def print_function_outputs(function):\n",
+    "    \"\"\" Print the outputs of the function for all 4-bit inputs. \"\"\"\n",
+    "    for i in range(total_inputs):\n",
+    "        input_bits = format_binary_input(i)\n",
+    "        output_bit = (function >> i) & 1\n",
+    "        print(f\"Input: {input_bits}, Output: {output_bit}\")\n",
+    "\n",
+    "# Generate a random function\n",
+    "random_function = generate_random_function()\n",
+    "\n",
+    "# Print the outputs for the randomly generated function\n",
+    "print_function_outputs(random_function)\n",
+    "\n",
+    "# Number of times you need to call the function to determine it\n",
+    "number_of_calls = total_inputs\n",
+    "\n",
+    "print(\"Number of calls needed:\", number_of_calls)\n"
    ]
   }
  ],
