Completed multiplying matrices tasks

--- a/Task/task.ipynb
+++ b/Task/task.ipynb
@@ -312,6 +312,97 @@
     "\n",
     "print(\"Number of calls needed:\", number_of_calls)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Title: Multiplying Matrices in Python\n",
+    "## Date: 22-11-2023\n",
+    "### Author: Hong Wei Phang\n",
+    "\n",
+    "## The Task:\n",
+    "Write a function that performs matrix multiplication on two rectangular lists containing floats in Python.\n",
+    "\n",
+    "\n",
+    "## Understanding Matrix Multiplication\n",
+    "\n",
+    "- Matrix multiplication involves two matrices, A and B. The number of columns in A must be equal to the number of rows in B.\n",
+    "- The resultant matrix, C, will have dimensions determined by the number of rows in A and the number of columns in B.\n",
+    "- Each element $C_{ij}$ of the resulting matrix is calculated as the sum of the products of the corresponding elements from the i-th row of A and the j-th column of B.\n",
+    "\n",
+    "## Python Implementation\n",
+    "\n",
+    "### Initialization\n",
+    "- Matrices are represented in Python as lists of lists, with each inner list representing a row.\n",
+    "- Initialize the result matrix C with dimensions equal to the number of rows in A and the number of columns in B, with all elements set to 0.\n",
+    "\n",
+    "### Nested Loops for Multiplication\n",
+    "- Use three nested loops:\n",
+    "  - The outer loop iterates through each row of A.\n",
+    "  - The middle loop iterates through each column of B.\n",
+    "  - The inner loop iterates through each element of the row of A and the corresponding element of the column of B, multiplying them together and adding the result to form an element in C.\n",
+    "\n",
+    "### Element-wise Multiplication and Sum\n",
+    "- For each pair of indices (i, j), calculate the sum of the products of corresponding elements as $C_{ij} = \\sum (A_{ik} * B_{kj})$ for all k.\n",
+    "\n",
+    "### Error Handling\n",
+    "- Ensure the dimensions of A and B are compatible for multiplication. If not, raise an error.\n",
+    "\n",
+    "## Example and Demonstration\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultant Matrix:\n",
+      "[19.0, 22.0]\n",
+      "[43.0, 50.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def matrix_multiply(A, B):\n",
+    "    # Check if multiplication is possible\n",
+    "    if len(A[0]) != len(B):\n",
+    "        raise ValueError(\"Number of columns in A must be equal to number of rows in B\")\n",
+    "\n",
+    "    # Initialize result matrix with zeros\n",
+    "    result = [[0 for _ in range(len(B[0]))] for _ in range(len(A))]\n",
+    "\n",
+    "    # Perform matrix multiplication\n",
+    "    for i in range(len(A)):\n",
+    "        for j in range(len(B[0])):\n",
+    "            for k in range(len(B)):\n",
+    "                result[i][j] += A[i][k] * B[k][j]\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Example usage\n",
+    "A = [[1.0, 2.0], [3.0, 4.0]]\n",
+    "B = [[5.0, 6.0], [7.0, 8.0]]\n",
+    "\n",
+    "try:\n",
+    "    C = matrix_multiply(A, B)\n",
+    "    print(\"Resultant Matrix:\")\n",
+    "    for row in C:\n",
+    "        print(row)\n",
+    "except ValueError as e:\n",
+    "    print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function takes two matrices A and B as input and returns their product. It assumes that the input matrices are correctly formatted (i.e., each row has the same number of columns). The function raises a ValueError if the matrices cannot be multiplied due to dimensional mismatch."
+   ]
   }
  ],
  "metadata": {
