Update task titles in notebook

--- a/task.ipynb
+++ b/task.ipynb
@@ -9,7 +9,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Title: Collatz Conjecture\n",
+    "# Task 1: Collatz Conjecture\n",
     "## Date: 28 September 2023\n",
     "### Author: Hong Wei Phang\n",
     "\n",
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Title: Calculating square roots\n",
+    "# Task 2: Calculating square roots\n",
     "## Date: 22 October 2023\n",
     "### Author: Hong Wei Phang\n",
     "\n",
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Title: Reverse Engineering Functions\n",
+    "# Task 3: Reverse Engineering Functions\n",
     "## Date: 11-11-2023\n",
     "### Author: Hong Wei Phang\n",
     "\n",
@@ -317,7 +317,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Title: Multiplying Matrices in Python\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 4: Multiplying Matrices in Python\n",
     "## Date: 22-11-2023\n",
     "### Author: Hong Wei Phang\n",
     "\n",
@@ -402,6 +409,15 @@
    "metadata": {},
    "source": [
     "This function takes two matrices A and B as input and returns their product. It assumes that the input matrices are correctly formatted (i.e., each row has the same number of columns). The function raises a ValueError if the matrices cannot be multiplied due to dimensional mismatch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# End of Assignment"
    ]
   }
  ],
