Fix typos and improve clarity in project and task notebooks

--- a/project.ipynb
+++ b/project.ipynb
@@ -149,7 +149,7 @@
     "2. Hadamard Gate Application:\n",
     "- Hadamard `(H)` gates are applied to both qubits. The Hadamard gate transforms the qubits into a superposition of states.\n",
     "- For $q_0$, it changes the state from $|0\\rangle$ to $\\frac{(|0\\rangle + |1\\rangle)}{\\sqrt{2}}$, creating a superposition of both computational basis states.$$H|0\\rangle = \\frac{(|0\\rangle + |1\\rangle)}{\\sqrt{2}}$$ \n",
-    "- For $q_1$, it transforms the state from $|1\\rangle$ to $\\frac{(|0\\rangle - |1\\rangle)}{\\sqrt{2}}$,  which is a superposition with a phase difference between the states..$$H|1\\rangle = \\frac{(|0\\rangle - |1\\rangle)}{\\sqrt{2}}$$"
+    "- For $q_1$, it transforms the state from $|1\\rangle$ to $\\frac{(|0\\rangle - |1\\rangle)}{\\sqrt{2}}$,  which is a superposition with a phase difference between the states.$$H|1\\rangle = \\frac{(|0\\rangle - |1\\rangle)}{\\sqrt{2}}$$"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "metadata": {},
    "source": [
     "4. The Second Hadamard Gate on $q_0$:\n",
-    "- After the oracle is applied, another Hadamard gate is applied to $q_0$. This second Hadamard gate is crucial because it interferes the two paths that the superposition has evolved into due to the oracle's operation."
+    "- After the oracle is applied, another Hadamard gate is applied to $q_0$. This second Hadamard gate is crucial because it interferes with the two paths that the superposition has evolved into due to the oracle's operation."
    ]
   },
   {
@@ -194,11 +194,11 @@
    "source": [
     "# Section 3: Implementation and Simulation of Deutsch's Algorithm\n",
     "\n",
-    "In this section, we implement Deutsch's Algorithm using Qiskit, a framework for quantum computing. We'll create a quantum circuit that represents the algorithm, define both constant and balanced oracles, and then simulate the circuit to observe its behavior.\n",
+    "In this section, we implement Deutsch's Algorithm using Qiskit, a framework for quantum computing. We'll create a quantum circuit that represents the algorithm, define both constant and balanced oracles, and then simulate the circuit to observe its behaviour.\n",
     "\n",
     "## Implementation in Qiskit\n",
     "\n",
-    "The implementation involves setting up a quantum circuit with two qubits and one classical bit. The first qubit is used to encode the input and the second qubit as an ancillary qubit. We apply Hadamard gates to both qubits to create a superposition, then apply the oracle, followed by another Hadamard gate on the first qubit. The measurement of the first qubit will reveal the nature of the oracle.\n",
+    "The implementation involves setting up a quantum circuit with two qubits and one classical bit. The first qubit is used to encode the input and the second qubit is an ancillary qubit. We apply Hadamard gates to both qubits to create a superposition, then apply the oracle, followed by another Hadamard gate on the first qubit. The measurement of the first qubit will reveal the nature of the oracle.\n",
     "\n",
     "## Simulation\n",
     "\n",
@@ -416,7 +416,7 @@
    "metadata": {},
    "source": [
     "Similarly, this part simulates the algorithm with the balanced oracle:\n",
-    "- The process is identical to that for the constant oracle.\n",
+    "- The process is identical to that of the constant oracle.\n",
     "\n",
     "Given that we're seeing the second histogram with all measurements resulting in `|1⟩`, this means that our balanced oracle is correctly causing the algorithm to identify the function as balanced."
    ]
