--- a/task.ipynb
+++ b/task.ipynb
@@ -199,7 +199,7 @@
     "\n",
     "The function iteratively applies Newton's method formula to improve the approximation of the square root.\n",
     "\n",
-    "It checks if the absolute difference between the current guess `z` and the next guess `z_next` is smaller than the specified tolerance. If the condition is met, the function returns the approximation as accurate as possible. If the maximum number of iterations is reached without achieving the desired accuracy, it returns the best approximation found thus far.\n",
+    "It checks if the absolute difference between the current guess `z` and the next guess `z_next` is smaller than the specified tolerance. If the condition is met, the function returns the approximation as accurately  as possible. If the maximum number of iterations is reached without achieving the desired accuracy, it returns the best approximation found thus far.\n",
     "\n",
     "#### Example Usage\n",
     "\n",
@@ -354,7 +354,7 @@
     "- For each pair of indices (i, j), calculate the sum of the products of corresponding elements as $C_{ij} = \\sum (A_{ik} * B_{kj})$ for all k.\n",
     "\n",
     "### Error Handling\n",
-    "- Ensure the dimensions of A and B are compatible for multiplication. If not, raise an error.\n",
+    "- Ensure the dimensions of A and B are compatible with multiplication. If not, raise an error.\n",
     "\n",
     "## Example and Demonstration\n"
    ]
